cleanup MSP and fix comment overflow display

--- a/app/assets/stylesheets/api/main.scss
+++ b/app/assets/stylesheets/api/main.scss
@@ -73,35 +73,38 @@
     font-weight: 1000;
     font-family: 'Muli', sans-serif;
     font-size: 14px;
+    display: inline
   }
 
   .comment {
-    margin: 6px;
+
     font-family: 'Muli', sans-serif;
     font-size: 14px;
     position: relative;
+    max-width: 610px;
+    padding: 2px 0;
+    border-left: 2px solid #fff;
+
+    margin: 0 60px 5px 5px;
   }
 
   .content {
     position:relative;
-    width:100%;
+    width: 100%;
     height:1.25em;
-    overflow:hidden;
     overflow-wrap: break-word;
     word-wrap: break-word;
-    z-index:10;
-word-break: normal
+    word-break: normal;
+    display: inline;
+    left: 4px;
   }
-
-
-
 
   .comment-dropdown {
     display: inline-block;
     vertical-align: middle;
     position: absolute;
     right: 0;
-    margin-right: 10px;
+    margin-right: -40px
   }
 
   .comment-dropdown-contents {
